<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtv_ceres_costaware_smoother</name>
  <version>1.0.0</version>
  <description>Ceres costaware smoother</description>
  <maintainer email="vargovcik@robotechvision.com">Matej Vargovcik</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_common</depend>
  <depend>angles</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav_2d_msgs</depend>
  <depend>nav2_core</depend>
  <depend>pluginlib</depend>
  <depend>libceres-dev</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <nav2_core plugin="${prefix}/rtv_ceres_costaware_smoother.xml" /> -->
  </export>
</package>
